# CGToy

./: .gitignore  Cargo.toml  README.md
src/: main.rs  pipeline.rs  render.rs
src/render/: _render_context.rs  context.rs  render_context.rs  render_graph.rs  resources.rs
src/render/context/: buffer.rs  sampler.rs  texture.rs  types.rs
src/shaders/: color.wgsl
