[package]
name = "cgtoy"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
futures = "0.3"
glam = "0.17"
log = "0.4"
uuid = { version = "0.8", features = ["v4"] }
wgpu = "0.10"
winit = "0.25"

[dependencies.gltf]
version = "0.16"
features = [
    "KHR_lights_punctual"
]